--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -29,14 +29,14 @@
       <!-- top navbar -->
       <nav>
         <div class="nav-wrapper blue darken-3">
-          <a href="#!" class="brand-logo">Kim Manager</a>
+          <a href="{{ url_for('home') }}" class="brand-logo">Kim Manager</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-            ><i class="fas fa-bar"></i
+            ><i class="fas fa-bars"></i
           ></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="">New Task</a></li>
-            <li><a href="">Categories</a></li>
+            <li><a href="{{ url_for('categories') }}">Categories</a></li>
           </ul>
         </div>
       </nav>
@@ -44,7 +44,7 @@
       <ul class="sidenav" id="mobile-demo">
         <li><a href="{{ url_for('home') }}">Home</a></li>
         <li><a href="">New Task</a></li>
-        <li><a href="">Categories</a></li>
+        <li><a href="{{ url_for('categories') }}">Categories</a></li>
       </ul>
     </header>
     <!-- HEADER SECTION ENDS HERE -->
@@ -87,6 +87,6 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js')}}"></script>
   </body>
 </html>
