--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -22,12 +22,34 @@
         <p></p>
       </div>
       <div class="card-action">
-        <a href="#" class="btn green accent-4">Edit</a>
-        <a href="#" class="btn red">Delete</a>
+        <a
+          href="{{ url_for('edit_category', category_id=category.id) }}"
+          class="btn green accent-4"
+          >Edit</a
+        >
+        <!-- Modal Trigger -->
+        <a href="#modal-{{ category.id }}" class="btn red modal-trigger"
+          >Delete</a
+        >
+        <!-- Modal Structure -->
+        <div id="modal-{{ category.id }}" class="modal">
+          <!-- To find the correct category by id -->
+          <div class="modal-content">
+            <h4>Are you sure you want to delete this Category?</h4>
+            <p>This action cannot be undone.</p>
+          </div>
+          <div class="modal-footer">
+            <!-- Deleting the category from database by the route -->
+            <a
+              href="{{ url_for('delete_category', category_id=category.id) }}"
+              class="btn red"
+              >Delete</a
+            >
+            <a href="modal-close" class="btn green accent-4">Cancel</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  {% endfor %}
+  {% endfor %} {% endblock %}
 </div>
-
-{% endblock %}
